tests/traci/get_variable/Vehicle/errors/UnsupportedVariable/testclient.prog
simstep2 5
getvariable 0xa4 0xff v1
simstep2 7

